# Delphi

./: .env.example  .gcloudignore  .gitignore  CURSOR_MIGRATION_PLAN.md  DATABUTTON_MIGRATION_PLAN.md  DATABUTTON_PROMPTS.md  DATA_MANAGEMENT_README.md  Dockerfile  FEATURES_ROADMAP.md  IMPLEMENTATION_PLAN.md  IMPORT_README.md  LAUNCHER_README.md  MIGRATION_CHECKLIST.md  MIGRATION_PLAN.md  NOTEBOOKS_README.md  OPTIMIZED_IMPORT_README.md  README.md  README_BIGQUERY.md  README_REFACTORED.md  README_TRADING_AI.md  README_VOLUME_ANALYSIS.md  SETUP.md  TIME_SERIES_IMPORT_README.md  UNIFIED_IMPORT_README.md  __init__.py  analyze_bigquery_data.py  app.py  app.yaml  config.py  create_desktop_shortcut.bat  cursor.config.json  data_reconciliation.py  data_repair.py  deploy.sh  direct_import.py  docker-compose.yml  import_data.py  import_manager.py  import_time_series.py  import_to_bigquery.py  (+32 more)
attached_assets/: Pasted--AI-Developer-Prompt-William-J-O-Neil-s-Volume-Based-Trading-Rules-for-Accumulation-Distrib-1738513786645.txt  Pasted--CREATE-TABS-Home-Settings-Caching-Pe-1739908776047.txt  Pasted-AI-Developer-Prompt-AI-Driven-Trailing-Stop-Predictive-Price-Indicator-with-Volume-Hidden-Marko-1738516800493.txt  Pasted-Okay-let-s-break-down-this-CONFIGURATION-NOT-FOUND-error-you-re-getting-when-trying-to-create-a-F-1738580936072.txt  Pasted-To-enhance-Oracle-of-Delphi-Financial-Predictions-with-Machine-Learning-ML-and-AI-for-ex-1738512696618.txt
config/: scheduler.ini  tracked_stocks.json
delphi/: __init__.py  app.py
docs/: sqlite_timeseries_storage.md  timeseries_storage.md
(+325 files in other folders)
